// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switcher should be able to disable switch to section header with "disableSwitchToHeading" 1`] = `
<NavigationAnalyticsContext
  data={
    Object {
      "attributes": Object {
        "itemsCount": 0,
      },
    }
  }
>
  <SwitcherWrapper
    appearance="drawer"
  >
    <WithAnalyticsEvents(_class3)
      data={
        Object {
          "adminLinks": Array [],
          "fixedLinks": Array [],
          "joinableSiteLinks": Array [],
          "joinableSiteProductLinks": Array [],
          "licensedProducts": Array [],
          "numberOfSites": 0,
          "suggestedProducts": Array [],
        }
      }
      subject="atlassianSwitcher"
    />
    <WithAnalyticsEvents(_class2)
      data={
        Object {
          "duration": 0,
        }
      }
      subject="atlassianSwitcherAvailableProducts"
    />
    <WithAnalyticsEvents(_class)
      data={
        Object {
          "duration": 0,
          "emptyRender": true,
        }
      }
      subject="atlassianSwitcherJoinableSites"
    />
    <WithAnalyticsEvents(_class)
      data={
        Object {
          "duration": 0,
          "emptyRender": true,
        }
      }
      subject="atlassianSwitcherRecommendedProducts"
    />
    <WithAnalyticsEvents(_class)
      data={
        Object {
          "duration": 0,
          "emptyRender": true,
        }
      }
      subject="atlassianSwitcherDiscoverMore"
    />
    <WithAnalyticsEvents(_class)
      data={
        Object {
          "duration": 0,
          "emptyRender": true,
        }
      }
      subject="atlassianSwitcherRecentContainers"
    />
    <WithAnalyticsEvents(_class)
      data={
        Object {
          "duration": 0,
          "emptyRender": true,
        }
      }
      subject="atlassianSwitcherCustomLinks"
    />
    <SwitchToSection
      adminLinks={Array []}
      appearance="drawer"
      disableHeading={true}
      fixedLinks={Array []}
      licensedProductLinks={Array []}
      onDiscoverMoreClicked={[Function]}
      suggestedProductLinks={Array []}
      triggerXFlow={[Function]}
    />
    <CrossJoinSection
      appearance="drawer"
      joinableSiteLinks={Array []}
      licensedProductLinks={Array []}
      rawProviderResults={
        Object {
          "addProductsPermission": Object {
            "data": false,
            "status": "complete",
          },
          "availableProducts": Object {
            "data": Object {
              "sites": Array [],
            },
            "status": "complete",
          },
          "collaborationGraphRecentContainers": Object {
            "data": Object {
              "collaborationGraphEntities": Array [],
            },
            "status": "complete",
          },
          "customLinks": Object {
            "data": Array [],
            "status": "complete",
          },
          "isXFlowEnabled": Object {
            "data": false,
            "status": "complete",
          },
          "joinableSites": Object {
            "data": Object {
              "sites": Array [],
            },
            "status": "complete",
          },
          "managePermission": Object {
            "data": false,
            "status": "complete",
          },
          "productRecommendations": Object {
            "data": Array [],
            "status": "complete",
          },
          "provisionedProducts": Object {
            "data": Object {},
            "status": "complete",
          },
          "recentContainers": Object {
            "data": Object {
              "data": Array [],
            },
            "status": "complete",
          },
          "userSiteData": Object {
            "data": Object {
              "currentSite": Object {
                "products": Array [],
                "url": "",
              },
            },
            "status": "complete",
          },
        }
      }
    />
    <RecentSection
      appearance="drawer"
      recentLinks={Array []}
    />
    <CustomLinksSection
      appearance="drawer"
      customLinks={Array []}
    />
  </SwitcherWrapper>
</NavigationAnalyticsContext>
`;

exports[`Switcher should render sections with headers by default 1`] = `
<NavigationAnalyticsContext
  data={
    Object {
      "attributes": Object {
        "itemsCount": 0,
      },
    }
  }
>
  <SwitcherWrapper
    appearance="drawer"
  >
    <WithAnalyticsEvents(_class3)
      data={
        Object {
          "adminLinks": Array [],
          "fixedLinks": Array [],
          "joinableSiteLinks": Array [],
          "joinableSiteProductLinks": Array [],
          "licensedProducts": Array [],
          "numberOfSites": 0,
          "suggestedProducts": Array [],
        }
      }
      subject="atlassianSwitcher"
    />
    <WithAnalyticsEvents(_class2)
      data={
        Object {
          "duration": 0,
        }
      }
      subject="atlassianSwitcherAvailableProducts"
    />
    <WithAnalyticsEvents(_class)
      data={
        Object {
          "duration": 0,
          "emptyRender": true,
        }
      }
      subject="atlassianSwitcherJoinableSites"
    />
    <WithAnalyticsEvents(_class)
      data={
        Object {
          "duration": 0,
          "emptyRender": true,
        }
      }
      subject="atlassianSwitcherRecommendedProducts"
    />
    <WithAnalyticsEvents(_class)
      data={
        Object {
          "duration": 0,
          "emptyRender": true,
        }
      }
      subject="atlassianSwitcherDiscoverMore"
    />
    <WithAnalyticsEvents(_class)
      data={
        Object {
          "duration": 0,
          "emptyRender": true,
        }
      }
      subject="atlassianSwitcherRecentContainers"
    />
    <WithAnalyticsEvents(_class)
      data={
        Object {
          "duration": 0,
          "emptyRender": true,
        }
      }
      subject="atlassianSwitcherCustomLinks"
    />
    <SwitchToSection
      adminLinks={Array []}
      appearance="drawer"
      fixedLinks={Array []}
      licensedProductLinks={Array []}
      onDiscoverMoreClicked={[Function]}
      suggestedProductLinks={Array []}
      triggerXFlow={[Function]}
    />
    <CrossJoinSection
      appearance="drawer"
      joinableSiteLinks={Array []}
      licensedProductLinks={Array []}
      rawProviderResults={
        Object {
          "addProductsPermission": Object {
            "data": false,
            "status": "complete",
          },
          "availableProducts": Object {
            "data": Object {
              "sites": Array [],
            },
            "status": "complete",
          },
          "collaborationGraphRecentContainers": Object {
            "data": Object {
              "collaborationGraphEntities": Array [],
            },
            "status": "complete",
          },
          "customLinks": Object {
            "data": Array [],
            "status": "complete",
          },
          "isXFlowEnabled": Object {
            "data": false,
            "status": "complete",
          },
          "joinableSites": Object {
            "data": Object {
              "sites": Array [],
            },
            "status": "complete",
          },
          "managePermission": Object {
            "data": false,
            "status": "complete",
          },
          "productRecommendations": Object {
            "data": Array [],
            "status": "complete",
          },
          "provisionedProducts": Object {
            "data": Object {},
            "status": "complete",
          },
          "recentContainers": Object {
            "data": Object {
              "data": Array [],
            },
            "status": "complete",
          },
          "userSiteData": Object {
            "data": Object {
              "currentSite": Object {
                "products": Array [],
                "url": "",
              },
            },
            "status": "complete",
          },
        }
      }
    />
    <RecentSection
      appearance="drawer"
      recentLinks={Array []}
    />
    <CustomLinksSection
      appearance="drawer"
      customLinks={Array []}
    />
  </SwitcherWrapper>
</NavigationAnalyticsContext>
`;
